apps/pyshare/pyshare-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: pyshare
  namespace: balhau-dev
  labels:
    version: armv6-0.0.2
    app: pyshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyshare
  template:
    metadata:
      labels:
        app: pyshare
    spec:
      containers:
      - name: pyshare
        image: 10.108.252.69:5000/balhau/pyshare:armv6-0.0.2
        ports:
        - containerPort: 8000
          name: registry
          protocol: TCP
        volumeMounts:
          - name: pyshare-store
            mountPath: /opt/shared
      volumes:
      - name: pyshare-store
        persistentVolumeClaim:
          claimName: pyshare-pvc
