apps/pyshare/pyshare-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pyshare-ingress
  namespace: balhau-dev
spec:
  tls:
  - hosts:
    - shared.balhau.net
  rules:
  - host: shared.balhau.net
    http:
      paths:
      - path: /
        backend:
          serviceName: pyshare
          servicePort: 8000
